--- a/src/Firebase/Login/Login.css
+++ b/src/Firebase/Login/Login.css
@@ -2,19 +2,16 @@
     width: 22rem;
     height: auto;
     border-radius: 2px;
-    box-shadow: 0 0 6px 0 rgba(0,115,230,0,3);
 }
-/* .form-container{
-    border: 1px solid black;
-    height: 450px;
-    width: 350px;
-    margin-top: 20px;
-} */
+.form-container{
+    margin-left: 50px;
+}
 .login-img{
+    margin-left: 100px;
     width: 5.5rem;
     height: 5.5rem;
     border-radius: 50%;
-    border:1px solid green;
+    border:1px solid #12bddb;
 }
 .form{
     margin-left: 30%;
@@ -24,4 +21,9 @@
 }
 .btn-google{
     padding: 6px 50px;
+}
+.fa-google{
+    margin-right: 10px;
+    font-size: 18px;
+    color: #d54836;
 }
