--- a/src/pages/Home/Doctors/Doctors.css
+++ b/src/pages/Home/Doctors/Doctors.css
@@ -7,3 +7,8 @@
     color: #223645;
     font-weight: 800;
 }
+@media only screen and (max-width:688) {
+    .doctors-item{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
