--- a/src/pages/Home/Doctors/Doctors.css
+++ b/src/pages/Home/Doctors/Doctors.css
@@ -7,8 +7,9 @@
     color: #223645;
     font-weight: 800;
 }
-@media only screen and (max-width:688) {
+@media only screen and (max-width:688px) {
     .doctors-item{
+        display: grid;
         grid-template-columns: repeat(1,1fr);
     }
 }
